# music-source-separation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py  train_config.py
experiments/: m2l_vocals.yaml
src/: __init__.py  source_separation_trainer.py
src/configs/: implementation_configs.py  train_config.py
src/datasets/: dataset_factory.py  moisesdb_dataset.py  musdb18_buffer_dataset.py  musdb18_dataset.py  musdb18_stem_dataset.py  source_separation_dataloader.py  source_separation_stem_dataloader.py
src/datasets/domain/: segment.py  track.py
src/models/: custom_demucs.py  custom_music2latent.py  layers.py  loss_factory.py  model.py  model_factory.py  music2latent.py  source_separation_model.py  stft.py  tutorial_model.py
src/train/criterias/: cosine_distance.py
src/utils/: inference.py  listen.py  metrics.py  model.py
