[build-system]
requires = ["setuptools>=61.2", "wheel"]

[project]
name = "src"
version = "0.0.1"
requires-python = ">=3.11.0"
authors = [
  {name = "Pedro González-Barrachina", email = "pcg71@alu.ua.es"},
]
description = "Source Separation Experiment Package"
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
  "torch>=2.5.1,<3.0.0",
  "torchaudio>=2.5.1,<3.0.0",
  "torchvision>=0.20.1,<1.0.0",
  "einops>=0.8.0,<1.0.0",
  "loguru>=0.7.3,<1.0.0",
  "h5py>=3.12.1,<4.0.0",
  "music2latent",
  "lightning",
  # datasets
  "musdb",
  "setuptools",
  "numpy<2.0.0",
  "moises-db @ git+https://github.com/moises-ai/moises-db.git",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "matplotlib",
    "sounddevice"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["omr*"]
exclude = ["datasets*", "experiments*", "docs*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]
torchaudio = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F403", "F405", "E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
